# arkalia-metrics-collector

./: .codecov.yml  .coveragerc  .gitignore  .semgrepignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  METRICS_FINAL_SUMMARY.md  METRICS_SUMMARY.md  README.md  RELEASE_GUIDE.md  WORKFLOWS_SUMMARY.md  aggregation_log.txt  cleanup_macos_files.sh  coverage.xml  mkdocs.yml  projects.json  pyproject.toml  setup.py  temp_dashboard.html
.github/: dependabot.yml
.github/workflows/: backup-on-merge.yml  ci-matrix.yml  gh-pages.yml  security.yml  test-pages.yml  update-metrics.yml
arkalia_luna_pro_real_metrics.json/: metrics.json
arkalia_quest_real_metrics.json/: metrics.json
athalia_real_metrics.json/: metrics.json
bbia_sim_real_metrics.json/: metrics.json
config/: default.yaml
config/project_configs/: athalia.yaml
docs/: AMELIORATIONS_IMPLÉMENTÉES.md  AMELIORATIONS_RECOMMANDEES.md  AUDIT_COMPLET_2025.md  CODECOV_SETUP.md  CONTRIBUTING.md  FAQ.md  GITHUB_PAGES_SETUP.md  METRICS_FINAL_SUMMARY.md  METRICS_REFERENCE.md  README.md  RESUME_AMELIORATIONS.md  SECURITY.md  SEO_GUIDE.md  WORKFLOWS_SUMMARY.md  index.md
docs/api/: collectors.md  exceptions.md  exporters.md  validators.md
docs/archive/: ANALYSE_AUDIT_PERPLEXITY_CORRIGEE.md  AUDIT_REPORT.md  PLAN_ACTION_REEL_CORRIGE.md  SYNTHESE_FINALE_AUDIT.md
docs/examples/: basic_collection.md  custom_export.md  external_projects.md  validation.md
docs/guides/: dashboard.md  installation.md  testing.md  usage.md
examples/: advanced_config.py  simple_usage.py
metrics/: EVOLUTION_REPORT.md  README_TABLE.md  aggregated_metrics.json  badges_final.md  dashboard.html  github_arkalia-luna-system_arkalia-luna-pro.json  metrics.csv  metrics.json  metrics.md  metrics.yaml  metrics_for_badges.json
metrics/arkalia-luna-pro/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-luna-pro_corrected/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-luna-pro_final/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-luna-pro_perfect/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-quest/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-quest_corrected/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/arkalia-quest_final/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/athalia/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/athalia_corrected/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/athalia_final/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/bbia-sim/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/bbia-sim_corrected/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/bbia-sim_final/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/detailed-test/: dashboard.html  metrics.csv  metrics.json  metrics.md
metrics/history/: metrics_20251114_223632.json  metrics_20251114_223638.json
metrics/self-test/: dashboard.html  metrics.csv  metrics.json  metrics.md
scripts/: create_badges_metrics.py  generate_dashboard.py  update_readme_metrics.py
src/arkalia_metrics_collector/: __init__.py  exceptions.py
src/arkalia_metrics_collector/cli/: __init__.py  main.py
src/arkalia_metrics_collector/collectors/: __init__.py  coverage_parser.py  git_contributions.py  github_collector.py  github_issues.py  metrics_alerts.py  metrics_collector.py  metrics_history.py  multi_project_aggregator.py
src/arkalia_metrics_collector/exporters/: __init__.py  badges_generator.py  external_exporters.py  interactive_dashboard.py  metrics_exporter.py
src/arkalia_metrics_collector/notifications/: __init__.py  notifiers.py
src/arkalia_metrics_collector/validators/: __init__.py  metrics_validator.py
templates/: basic_config.yaml  django_config.yaml  library_config.yaml
tests/: conftest.py  test_basic.py
tests/integration/: test_dashboard_generation.py  test_external_projects.py  test_output_validation.py
tests/performance/: test_performance_metrics.py
tests/unit/cli/: test_cli_main.py
tests/unit/collectors/: test_metrics_alerts.py  test_metrics_collector.py
tests/unit/exporters/: test_external_exporters.py  test_metrics_exporter.py
tests/unit/validators/: test_metrics_validator.py
